Refactor "for" by "stream"